# Nexon-Nuker

./: README.md  main.py  pyproject.toml  settings.json  utils.py
data/: proxies.txt
nuke/: nuke.py  ready.py  webhook.py
