[tool.poetry]
name = "repl_python3_rex-nooker-v4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tasksio = "^0.0.0"
aiohttp = "^3.7.4"
discord = "^1.7.3"
psutil = "^5.9.0"
aiosonic = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
